# yuleOSH

./: .clang-tidy  .cov.all  .coveragerc  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASE_NOTES.md  __next._tree.txt  architecture.html  dashboard.html  dbg3  debug  docker-compose.yml  e2e  gscr-c-rules.yaml  gscr-cpp-rules.yaml  incr_test  index.html  index.txt  install.sh  login.html  loop-audit-bcm-seat.py  misra-rules.yaml  nav-demo.html  osh-fusion-architecture.html  pricing.html  production-sprint-plan.md  progress-gscr-autosar-depth.md  progress-gscr-content-fixes.md  progress-gscr-content-refinement.md  progress-gscr-extended-compliance.md  progress-gscr-fixes.md  progress-gscr-runtime-mapping.md  progress-phase1.md  pyproject.toml  pytest.ini  setup.py  (+9 more)
.semgrep/: dataflow-python.yml  security-c.yml  security-python.yml  semgrep.yml
.yuleosh/: ci-config.yaml  store.db
_not-found/: __next._full.txt  __next._not-found.__PAGE__.txt  __next._tree.txt
app/: welcome.html
ci/: test-gate-validation.sh
dashboard/: __next._tree.txt
demo/: __next._tree.txt  index.html  index.txt
demos/uart/: CMakeLists.txt  README.md  demo_host.c
demos/uart/cmake/: toolchain_esp32.cmake  toolchain_stm32.cmake
demos/uart/esp32/: platform_esp32.c  uart_bridge.c  uart_bridge.h
demos/uart/stm32/: platform_stm32.c  usart_driver.c  usart_driver.h
deploy/: .env.example  .env.production.example  PRODUCTION_DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
desktop/: acceptance-matrix.md  architecture.md  electron-builder.yml  main.js  p0-fix-report.md  package-lock.json  package.json  preload.js  product-roadmap.md  review.md  self-check.md  server-manager.js  spec.md  startup-analysis.md  tray.js  verification-report.md
docs/: .sync-gate.yaml  404.html  QUICKSTART.md  README.md  USAGE.md  __next.__PAGE__.txt  acceptance-matrix-demo-uart.md  acceptance-matrix-loop-engineering.md  acceptance-matrix-v0.4.0.md  acceptance-matrix.md  ai-benchmark.md  analytics-setup.md  architecture-diagram.html  architecture.md  auth-deploy-progress.md  benchmark-run-log-07-13.md  ci-rtm-check.sh  cl2-dry-run-checklist.md  cli-design.md  coverage-attack-plan.md  cross-review-v070-hermes.json  customer-demo-plan-and-review.md  cybersecurity-baseline.md  deploy-guide.md  edition-matrix.md  evidence-pack-structure.md  hil-demo-plan.md  hil-strategy.md  hw-testing-architecture.md  impact-analysis.md  integration-strategy.md  iso26262-tool-qualification.md  launch-announce.md  llm-strategy.md  login.txt  maintenance-patterns.md  misra-2023-roadmap.md  misra-c2023-cppcheck-validation.md  misra-deviations.md  misra-e2e-verification-07-13.md  (+53 more)
en/: pricing.html
expert-review/: ai-benchmark-tasks.md  ai-tools-expert-review.md  automotive-embedded-expert-review.md  benchmark-review.md  brainstorm-claude.md  brainstorm-hermes.md  brainstorm-synthesis.md  dashboard-real-data-check.md  dashboard-spec-mvp.md  docs-audit.md  final-battle-plan.md  final-reeval-auto.md  positioning-review.md  project-brief.md  push8-progress.md  quality-gates-sprint1.md  re-eval-brief.md  reeval-ai-expert.md  reeval-auto-expert.md  reeval2-ai-expert.md  reeval2-auto-expert.md  regression-report.md  scene-landing-review.md  sprint-optimization-plan.md  sprint1-progress.md  synthesis-report.md  tech-debt-closure.md  technical-implementation-plan.md  validation-report.md
frontend/: Dockerfile  jest.config.ts  next.config.ts  package-lock.json  package.json
kanban/: mvp-tasks.md
knowledge-graph/: kg-architecture.md  kg-risk-analysis.md  kg-roadmap.md  kg-spec-draft.md  progress-kg-p1.md
login/: __next._full.txt  __next.login.__PAGE__.txt  index.html
my-project/: pyproject.toml
onboarding/: __next._tree.txt  __next.onboarding.__PAGE__.txt  index.html  index.txt
pricing/: __next._full.txt  __next._head.txt
project-docs/: acceptance-matrix-rtm.md  aspice-readiness-assessment.md  rtm-spec.md  spec.md
push9-delivery/: benchmark-extend-report.md  dashboard-fix-report.md  dashboard-review.md  misra-c2023-roadmap.md  misra-mapping-fix-report.md  p0-sql-audit-report.md  self-aspice-validation.md
register/: __next._full.txt  __next._index.txt  __next._tree.txt  __next.register.__PAGE__.txt  index.html
reports/: 2026-07-14-final-summary.md  acceptance-matrix-rtm.md  aspice-audit-report.md  aspice-selfcheck-gap-analysis.md  brainstorm-next-steps.md  bugfix-loop-report.md  chen-fixes-report.md  chen-fixes-round2-report.md  ci-gate-test-report.md  cl2-audit-plan.md  cl2-audit-self-check.md  cl2-post-trackab-verification.md  cl2-pre-expert-review.md  cl2-regression-fix-report.md  cl3-loop-report.md  cl3-p1-fix-report.md  claude-fix-report.md  commercialization-plan.md  competitive-analysis-v2.3.md  compliance-checker-upgrade-report.md  coverage-baseline-v2.md  coverage2-desktop-fix-report.md  expert-assessment-laochen-misra.md  expert-brief-misra.md  expert-brief-pipeline.md  expert-cl2-final.md  expert-cl2-formal-invite.md  expert-cl2-retest-invite.md  expert-cl2-retest-result-round3.md  expert-cl2-retest-result-round4.md  expert-cl2-retest-result.md  expert-cl2-trackab-invite.md  expert-cl2-trackab-review.md  expert-invite-for-cl2.md  expert-invite-industry-review.md  expert-issue-fix-report.md  expert-pipeline-assessment.md  expert-pipeline-assessment2.md  expert-pipeline-assessment3.md  expert-pipeline-assessment4.md  (+134 more)
reviews/: engine-review-hermes.md  expert-review-result-v2.md  expert-review-result.md  expert-review-template.md  fix-report.md  fix-review-hermes.md  phase0-acceptance-checklist.md  phase0-review-result.md  realworld-ci-failure-quality-review.md  realworld-ci-failure-rca.md
scripts/: backfill_ci_history.py  check-mangled-env.py  cve-scan.sh  deploy-verify.sh  dev-quickstart.sh  diagnose_yuledkcs.py  install-kg-hooks.sh  run-codeql.sh  run-semgrep.sh  run_c_coverage.py
spec/: fault-injection-source.md  (+6 more)
src/fault-inject/: CMakeLists.txt  README.md  doc.go
src/fault-inject/src/: TaskFaultInject.c
src/fault-inject/test/: FaultInject_Test.c
(+1112 files in other folders)
