[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yuleosh"
version = "1.0.1"
description = "嵌入式AI开发全流程平台 — OpenSpec+Superpowers+Harness Engineering 三位一体"
authors = [{name = "frisky1985"}]
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "bcrypt>=4.1",
    "pyjwt>=2.13.0",
    "psycopg2-binary>=2.9",
    "pyserial>=3.5",
    "pyyaml>=6.0",
    "stripe>=7.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/frisky1985/yuleOSH"
Repository = "https://github.com/frisky1985/yuleOSH"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-mock"]

[project.scripts]
yuleosh = "yuleosh._entry:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["yuleosh"]
branch = true
omit = [
    "src/yuleosh/templates/*",
    "src/yuleosh/hardware/*",
    "src/yuleosh/cross/*",
    "src/yuleosh/sil/*",
    "src/yuleosh/preview/*",
    "src/yuleosh/testgen/*",
    "src/yuleosh/store_pg.py",
    "src/yuleosh/cli/*",
    "src/yuleosh/skills/*",
    "src/yuleosh/compliance/*",
    "src/yuleosh/review/*",
    "src/yuleosh/alm/*",
    "src/yuleosh/usage/stripe_gateway.py",
    "src/yuleosh/plugins/sandbox.py",
    "src/yuleosh/adapter/*",
    "src/yuleosh/llm/*",
    "src/yuleosh/notify.py",
    "src/yuleosh/api/demo*.py",
    "src/yuleosh/api/preview.py",
    "src/yuleosh/api/subscription.py",
    "src/yuleosh/api/webhooks.py",
    "src/yuleosh/api/wizard.py",
    "src/yuleosh/api/validate.py",
    "src/yuleosh/api/apikeys.py",
    "src/yuleosh/api/audit.py",
    "src/yuleosh/api/notify.py",
    "src/yuleosh/api/ci.py",
    "src/yuleosh/api/stats.py",
    "src/yuleosh/api/project.py",
    "src/yuleosh/api/review.py",
    "src/yuleosh/api/evidence.py",
    "src/yuleosh/api/spec.py",
    "src/yuleosh/spec/diff.py",
    "src/yuleosh/ui/*",
    "src/yuleosh/usage/*",
    "src/yuleosh/_entry.py",
    "src/yuleosh/pipeline/step_handlers/*",
    "src/yuleosh/pipeline/steps.py",
    "src/yuleosh/pipeline/prompts.py",
    "src/yuleosh/pipeline/session.py",
    "src/yuleosh/pipeline/run.py",
    "src/yuleosh/pipeline/stages.py",
    "src/yuleosh/pipeline/step_classes.py",
    "src/yuleosh/pipeline/orchestrator.py",
    "src/yuleosh/evidence/*",
    "src/yuleosh/api/middleware.py",
    "src/yuleosh/api/pipeline_steps.py",
    "src/yuleosh/ci/agent_traceability.py",
    "src/yuleosh/ci/build_metadata.py",
    "src/yuleosh/ci/coverage_pipeline.py",
    "src/yuleosh/ci/coverage_trend.py",
    "src/yuleosh/ci/gcov_coverage.py",
    "src/yuleosh/ci/kpi.py",
    "src/yuleosh/ci/misra_fusion.py",
    "src/yuleosh/ci/misra_report.py",
    "src/yuleosh/ci/misra_trend.py",
    "src/yuleosh/ci/profile.py",
    "src/yuleosh/ci/stage_utils.py",
    "src/yuleosh/ci/stages.py",
    "src/yuleosh/ci/sync_check.py",
    "src/yuleosh/ci/yaml_validator.py",
    "src/yuleosh/ci/layers.py",
    "src/yuleosh/ci/config.py",
    "src/yuleosh/ci/runner.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise ImportError",
    "except ImportError",
    "def _get_secret",
    "def main",
    "def _check_llm_key",
]
fail_under = 60
show_missing = true
