[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yuleosh"
version = "2.2.0"
description = "嵌入式AI开发全流程平台 — OpenSpec+Superpowers+Harness Engineering 三位一体"
authors = [{name = "frisky1985"}]
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "bcrypt>=4.1",
    "pyjwt>=2.13.0",
    "psycopg2-binary>=2.9",
    "pyserial>=3.5",
    "pyyaml>=6.0",
    "stripe>=7.0",
    # CVE-2026 transitive dep constraints
    "msgpack>=1.2.1",  # GHSA-6v7p-g79w-8964
    "starlette>=1.0.1",  # PYSEC-2026-161
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/frisky1985/yuleOSH"
Repository = "https://github.com/frisky1985/yuleOSH"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-mock"]

[project.scripts]
yuleosh = "yuleosh._entry:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
yuleosh = ["ci/rulesets/misra-rules.yaml"]

[tool.setuptools]
include-package-data = true

[tool.coverage.run]
source = ["yuleosh"]
branch = true
omit = [
    "src/yuleosh/templates/*",
    "src/yuleosh/sil/*",
    "src/yuleosh/plugins/sandbox.py",
    "src/yuleosh/llm/client.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise ImportError",
    "except ImportError",
    "def _get_secret",
    "def main",
    "def _check_llm_key",
]
fail_under = 2
show_missing = true
